done the basic frontend for testing
